--- a/expcheck.kv
+++ b/expcheck.kv
@@ -1,5 +1,7 @@
+# expcheck.kv
+# the expcheck kivy configuration file
+
 <SelectableLabel>:
-    # Draw a background to indicate selection
     canvas.before:
         Color:
             rgba: (.0, 0.9, .1, .3) if self.selected else (0, 0, 0, 1)
@@ -16,6 +18,11 @@
         orientation: 'vertical'
         multiselect: True
         touch_multiselect: True
-        
-BoxLayout:
-    size: self.size
+    
+<AddScreen>:
+    BoxLayout:
+        Button:
+            text: 'My settings button'
+        Button:
+            text: 'Back to menu'
+            on_press: root.manager.current = 'list'
