Added calendar and made progress on data compression

--- a/expcheck.kv
+++ b/expcheck.kv
@@ -19,10 +19,10 @@
         multiselect: True
         touch_multiselect: True
     
-<AddScreen>:
-    BoxLayout:
-        Button:
-            text: 'My settings button'
-        Button:
-            text: 'Back to menu'
-            on_press: root.manager.current = 'list'
+#<AddScreen>:
+#    BoxLayout:
+#        Button:
+#            text: 'My settings button'
+#        Button:
+#            text: 'Back to menu'
+#            on_press: root.manager.current = 'list'
