--- a/cordova/www_src/css/index.css
+++ b/cordova/www_src/css/index.css
@@ -1,6 +1,11 @@
-td {border: 1px #DDD solid; padding: 5px; cursor: pointer;}
+td {
+    /* border: 1px #DDD solid;  */
+    padding: 5px; 
+    cursor: pointer;
+}
 
 .selected {
-    background-color: brown;
-    color: #FFF;
+    background-color: rgb(0, 0, 0);
+    color: rgb(245, 9, 9);
 }
+
