--- a/cordova/www_src/css/global.css
+++ b/cordova/www_src/css/global.css
@@ -12,8 +12,9 @@ body {
     font-family: inherit;
 }
 h1 {
-    margin:0px;
+    margin: 0px;
     padding: 0.5%;
+	padding-top: 0.5em;
     background-color: rgb(0, 88, 170);
     color: rgb(255, 255, 255);
     font-size: 20pt;
@@ -34,9 +35,13 @@ h1 {
 button {
     font-size: inherit;
     background-color: rgb(0, 88, 170);
-    color: azure;
+    color: white;
     font-family: inherit;
-}
+	vertical-align: middle;
+	border-radius: 20px;
+	border: 5px;
+	border-color: black;
+}*
 table {
     /* display: inline; */
     width: 100%;
@@ -55,4 +60,21 @@ select {
     margin: 5px;
     font-size: inherit;
     font-family: inherit;
+}
+label{
+	padding-left: 20px;
+}
+.icon {
+	vertical-align: middle;
+	padding: 5px;
+    height: 12pt;
+    width: 12pt;
+}
+
+#clear_data_button {
+	display: none;
+}
+
+#add_food_button {
+	background-color: #FFA500;
 }
