--- a/cordova/www/css/global.css
+++ b/cordova/www/css/global.css
@@ -1,6 +1,7 @@
 html {
     margin: 0cm;
     font-family: "Verdana", "Geneva", sans-serif;
+	width: 99%;
 }
 body {
     /* display: -webkit-inline-box; */
@@ -10,6 +11,7 @@ body {
     color: rgb(0, 0, 0);
     font-size: 12pt;
     font-family: inherit;
+	width: 100%;
 }
 h1 {
     margin: 0px;
@@ -26,22 +28,33 @@ h1 {
     padding: 0.5%;
     margin: 0px;
     background-color: rgb(0, 88, 170);
+	padding-top: 1.5em;
     color: azure;
     width: 100%;
     height: 100%;
     font-family: inherit;
 }
 
+
+
 button {
     font-size: inherit;
     background-color: rgb(0, 88, 170);
     color: white;
     font-family: inherit;
+	font-size: 16pt;
 	vertical-align: middle;
 	border-radius: 20px;
-	border: 5px;
+	border: 0;
 	border-color: black;
-}*
+	cursor: pointer;
+}
+
+
+button:hover, button:focus {
+background-color: #2980B9;
+}
+
 table {
     /* display: inline; */
     width: 100%;
@@ -75,6 +88,4 @@ label{
 	display: none;
 }
 
-#add_food_button {
-	background-color: #FFA500;
-}
+
