--- a/cordova/www/css/index.css
+++ b/cordova/www/css/index.css
@@ -5,7 +5,7 @@ td {
 }
 
 .selected {
-    background-color: rgb(0, 0, 0);
-    color: rgb(245, 9, 9);
+    background-color: #2980B9;
+    color: rgb(255, 255, 255);
 }
 
