--- a/cordova/www/css/toast.css
+++ b/cordova/www/css/toast.css
@@ -2,8 +2,9 @@
 /* The toast - position it at the bottom and in the middle of the screen */
 #toast {
     visibility: hidden; /* Hidden by default. Visible on click */
-    /* min-width: 100px; Set a default minimum width */
-    /* margin-left: -50px; Divide value of min-width by 2 */
+    min-width: 100px; /* Set a default minimum width */
+	max-width: 300px;
+    margin-left: -50px; /* Divide value of min-width by 2 */
     background-color: #333; /* Black background color */
     color: #fff; /* White text color */
     text-align: center; /* Centered text */
@@ -11,7 +12,7 @@
     padding: 16px; /* Padding */
     position: fixed; /* Sit on top of the screen */
     z-index: 1; /* Add a z-index if needed */
-    /* left: 40%; Center the toast */
+    left: 20%; /*Center the toast  */
     bottom: 30px; /* 30px from the bottom */
 }
 
