--- a/cordova/www/css/global.css
+++ b/cordova/www/css/global.css
@@ -1,21 +1,17 @@
 html {
     margin: 0cm;
     font-family: "Verdana", "Geneva", sans-serif;
-	width: 99%;
 }
 body {
-    /* display: -webkit-inline-box; */
     margin: 0px;
     padding: 0px;
     background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
     font-size: 12pt;
-    font-family: inherit;
-	width: 100%;
+	width: 99%;
 }
 h1 {
     margin: 0px;
-    padding: 0.5%;
+    padding: 0.7%;
 	padding-top: 0.5em;
     background-color: rgb(0, 88, 170);
     color: rgb(255, 255, 255);
@@ -23,11 +19,9 @@ h1 {
     width: 100%;
     font-family: inherit;
 }
-div {
-	display: flex-box;
-}
 
 .buttons {
+	display: flex;
     padding: 0.5%;
     margin: 0px;
     background-color: rgb(0, 88, 170);
@@ -36,11 +30,11 @@ div {
     width: 100%;
     height: 100%;
     font-family: inherit;
+
+
 }
-
-
-
 button {
+	position: sticky;
     font-size: inherit;
     background-color: rgb(0, 88, 170);
     color: white;
@@ -51,8 +45,11 @@ button {
 	border: 0;
 	border-color: black;
 	cursor: pointer;
+	left: 0%
 }
-
+#drp1 {
+	left: 100%
+}
 
 button:hover, button:focus {
 background-color: #2980B9;
