--- a/cordova/www/css/index.css
+++ b/cordova/www/css/index.css
@@ -91,3 +91,15 @@ td {
     color: rgb(255, 255, 255);
 }
 
+.menu_content {
+	display: none;
+	position: absolute;
+	left: 100%;
+	top: 0%;
+}
+
+.show {
+	display: block;
+
+}
+
