--- a/cordova/www/css/index.css
+++ b/cordova/www/css/index.css
@@ -30,7 +30,7 @@ h1 {
     height: 100%;
     font-family: inherit;
 }
-button {
+button, .dropdown button{
 	position: sticky;
     font-size: inherit;
     background-color: rgb(0, 88, 170);
@@ -44,13 +44,14 @@ button {
 	cursor: pointer;
 	left: 0%
 }
-#menu {
-	left: 100%
+#div_drp_dwn {
+	position: sticky;
+	left: 100%;
 }
 button:hover, button:focus {
-background-color: #2980B9;
+	background-color: #2980B9;
+	border: none;
 }
-
 table {
     /* display: inline; */
     width: 100%;
@@ -74,6 +75,7 @@ label{
 	padding-left: 20px;
 }
 .icon {
+	pointer-events: none;
 	vertical-align: middle;
 	margin: 5px;
     height: 20pt;
@@ -91,15 +93,36 @@ td {
     color: rgb(255, 255, 255);
 }
 
-.menu_content {
-	display: none;
-	position: absolute;
-	left: 100%;
-	top: 0%;
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
 
-.show {
-	display: block;
-
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 110%;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
 
